--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,9 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="D:/NewDay/MyAsynTask/libs/httpmime-4.3.6.jar"/>
+	<classpathentry kind="src" path="/PhotoSelector"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="D:/NewDay/PhotoSelector/bin/photoselector.jar" sourcepath="/PhotoSelector/src"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
