--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -29,6 +29,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity
+            android:name="com.photoselector.ui.PhotoSelectorActivity"
+            android:label="图片选择" >
+        </activity>
+         <activity
+            android:name="com.photoselector.ui.PhotoPreviewActivity"
+            android:label="图片预览" >
+        </activity>
+        <activity
+            android:name="com.photoselector.ui.PhotoSelectorPreview"
+            android:label="点击图片" >
+        </activity>
         <activity android:name="com.example.upload.UploadActivity"></activity>y
     </application>
 
